# pbf2json_rust

./: .gitignore  CLAUDE.md  COMMIT_MESSAGE.md  Cargo.toml  DESIGN.md  README.md
examples/: cpu_benchmark.rs
src/: converter.rs  coordinate_storage.rs  lib.rs  main.rs  osm.rs  parallel_converter.rs
tests/: benchmark_parallel.rs  integration_test.rs  parallel_test.rs  test_advanced_filtering.rs  test_converter.rs  test_osm.rs  test_three_pass_geometry.rs
