[package]
name = "pbf2json"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pbf2json"
path = "src/main.rs"

[lib]
name = "pbf2json"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
geojson = "0.24.2"
lmdb = "0.8.0"
num_cpus = "1.16.0"
osmpbf = "0.3.6"
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"

[dev-dependencies]
tempfile = "3.23.0"
